--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://kit.fontawesome.com/84245f6019.js" crossorigin="anonymous"></script>
     <script src="dataGenerator.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>  <!-- Your Entire Application will be built inside this div! -->
